# SoftLight

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README_KOREAN.md  Window README.md  Window README_KOREAN.md  build_freeimage.sh  external_deps.cmake
.github/workflows/: cmake.yml
soft_render/: CMakeLists.txt  FindFreeImage.cmake  Findassimp.cmake  FreeImageConfig.cmake  assimpConfig.cmake  buildUtil.cmake  build_freeimage.sh
soft_render/include/soft_render/: SR_Animation.hpp  SR_AnimationChannel.hpp  SR_AnimationKeyList.hpp  SR_AnimationPlayer.hpp  SR_AnimationProperty.hpp  SR_Atlas.hpp  SR_BlitProcesor.hpp  SR_BoundingBox.hpp  SR_Camera.hpp  SR_ClearProcesor.hpp  SR_Color.hpp  SR_Config.hpp  SR_Context.hpp  SR_FontLoader.hpp  SR_FragmentProcessor.hpp  SR_Framebuffer.hpp  SR_Geometry.hpp  SR_ImgFile.hpp  SR_ImgFilePPM.hpp  SR_IndexBuffer.hpp  SR_KeySym.hpp  SR_KeySymCocoa.hpp  SR_KeySymWin32.hpp  SR_KeySymXlib.hpp  SR_Material.hpp  SR_Mesh.hpp  SR_PackedVertex.hpp  SR_Plane.hpp  SR_ProcessorPool.hpp  SR_RenderWindow.hpp  SR_RenderWindowCocoa.hpp  SR_RenderWindowWin32.hpp  SR_RenderWindowXCB.hpp  SR_RenderWindowXlib.hpp  SR_Sampler.hpp  SR_ScanlineBounds.hpp  SR_SceneFileLoader.hpp  SR_SceneFileUtility.hpp  SR_SceneGraph.hpp  SR_SceneNode.hpp  (+19 more)
soft_render/src/: SR_Animation.cpp  SR_AnimationChannel.cpp  SR_AnimationKeyList.cpp  SR_AnimationPlayer.cpp  SR_Atlas.cpp  SR_BlitProcessor.cpp  SR_BoundingBox.cpp  SR_Camera.cpp  SR_ClearProcessor.cpp  SR_Color.cpp  SR_Context.cpp  SR_FontLoader.cpp  SR_FragmentProcessor.cpp  SR_Framebuffer.cpp  SR_Geometry.cpp  SR_ImgFile.cpp  SR_ImgFilePPM.cpp  SR_IndexBuffer.cpp  SR_KeySymCocoa.mm  SR_KeySymWin32.cpp  SR_KeySymXlib.cpp  SR_Material.cpp  SR_Mesh.cpp  SR_ProcessorPool.cpp  SR_RenderWindow.cpp  SR_RenderWindowCocoa.mm  SR_RenderWindowWin32.cpp  SR_RenderWindowXCB.cpp  SR_RenderWindowXlib.cpp  SR_SceneFileLoader.cpp  SR_SceneFileUtility.cpp  SR_SceneGraph.cpp  SR_SceneNode.cpp  SR_Shader.cpp  SR_ShaderProcessor.cpp  SR_TexSampler.cpp  SR_TextMeshLoader.cpp  SR_Texture.cpp  SR_Transform.cpp  SR_UniformBuffer.cpp  (+8 more)
soft_render/tests/: CMakeLists.txt  animation_test.cpp  color_convert.cpp  draw_test.cpp  fs_quad.cpp  instancing_test.cpp  line_drawing.cpp  live_scene_test.cpp  mesh_test.cpp  packed_normal_test.cpp  scanline_offset_test.cpp  scene_info_test.cpp  screen_tile_test.cpp  skybox_test.cpp  sr_vertex_chunking_test.cpp  sr_vertex_info.cpp  test_common.cpp  test_common.hpp  text_test.cpp  volume_test.cpp  window_buffer_test.cpp  window_test.cpp  z_curve_test.cpp
soft_render/tests/testdata/african_head/: african_head.mtl
softlight/: CMakeLists.txt  FindFreeImage.cmake  Findassimp.cmake  FreeImageConfig.cmake  assimpConfig.cmake  buildUtil.cmake  freetypeConfig.cmake
softlight/include/softlight/: SL_Animation.hpp  SL_AnimationChannel.hpp  SL_AnimationKeyList.hpp  SL_AnimationPlayer.hpp  SL_AnimationProperty.hpp  SL_Atlas.hpp  SL_BlitCompressedProcesor.hpp  SL_BlitProcesor.hpp  SL_BoundingBox.hpp  SL_Camera.hpp  SL_ClearProcesor.hpp  SL_Color.hpp  SL_ColorCompressed.hpp  SL_ColorHSX.hpp  SL_ColorYCoCg.hpp  SL_Config.hpp  SL_Context.hpp  SL_Dither.hpp  SL_FontLoader.hpp  SL_FragmentProcessor.hpp  SL_Framebuffer.hpp  SL_Geometry.hpp  SL_ImgFile.hpp  SL_ImgFilePPM.hpp  SL_IndexBuffer.hpp  SL_KeySym.hpp  SL_KeySymCocoa.hpp  SL_KeySymWin32.hpp  SL_KeySymXlib.hpp  SL_LineProcessor.hpp  SL_LineRasterizer.hpp  SL_Material.hpp  SL_Mesh.hpp  SL_OcclusionQuery.hpp  SL_Octree.hpp  SL_PackedVertex.hpp  SL_PipelineState.hpp  SL_Plane.hpp  SL_PointProcessor.hpp  SL_PointRasterizer.hpp  (+45 more)
softlight/include/softlight/script/: SL_SceneGraphScript.hpp
softlight/src/: SL_Animation.cpp  SL_AnimationChannel.cpp  SL_AnimationKeyList.cpp  SL_AnimationPlayer.cpp  SL_Atlas.cpp  SL_BlitCompressedProcessor.cpp  SL_BlitProcessor.cpp  SL_BoundingBox.cpp  SL_Camera.cpp  SL_ClearProcessor.cpp  SL_Color.cpp  SL_Context.cpp  SL_FontLoader.cpp  SL_FragmentProcessor.cpp  SL_Framebuffer.cpp  SL_Geometry.cpp  SL_ImgFile.cpp  SL_ImgFilePPM.cpp  SL_IndexBuffer.cpp  SL_KeySym.cpp  SL_KeySymCocoa.mm  SL_KeySymWin32.cpp  SL_KeySymXlib.cpp  SL_LineProcessor.cpp  SL_LineRasterizer.cpp  SL_Material.cpp  SL_Mesh.cpp  SL_PackedVertex.cpp  SL_PipelineState.cpp  SL_PointProcessor.cpp  SL_PointRasterizer.cpp  SL_ProcessorPool.cpp  SL_RasterProcessor.cpp  SL_RenderWindow.cpp  SL_RenderWindowCocoa.mm  SL_RenderWindowWin32.cpp  SL_RenderWindowXCB.cpp  SL_RenderWindowXlib.cpp  SL_SceneFileLoader.cpp  SL_SceneFileUtility.cpp  (+26 more)
softlight/src/script/: SL_SceneGraphScript.cpp
softlight/tests/: CMakeLists.txt  sl_animation_test.cpp  sl_color_convert.cpp  sl_color_rgb9e5.cpp  sl_draw_test.cpp  sl_fullscreen_quad.cpp  sl_instancing_test.cpp  sl_large_scene_test.cpp  sl_line_axis_test.cpp  sl_line_drawing.cpp  sl_mesh_test.cpp  sl_mrt_test.cpp  sl_normalmap_test.cpp  sl_octree_rendering_test.cpp  sl_octree_test.cpp  sl_packed_normal_test.cpp  sl_quadtree2_rendering_test.cpp  sl_quadtree_rendering_test.cpp  sl_quadtree_test.cpp  sl_scanline_offset_test.cpp  sl_scene_info_test.cpp  sl_screen_tile_test.cpp  sl_sdf_generator.cpp  sl_sdf_generator.hpp  sl_sdf_image_test.cpp  sl_sdl2_test.cpp  sl_shading_test.cpp  sl_skybox_test.cpp  sl_spatial_hierarchy_test.cpp  sl_text_test.cpp  sl_vertex_cache_test.cpp  sl_vertex_chunking_test.cpp  sl_vertex_info.cpp  sl_volume_rendering_test.cpp  sl_window_test.cpp  sl_z_curve_test.cpp
softlight/tests/testdata/: lorem_ipsum.txt
softlight/tests/testdata/african_head/: african_head.ppm
softlight/tests/testdata/base_model/: base_model.dae
softlight/tests/testdata/heart/: heart.mtl
